--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "d:\\Projek\\Python\\Bangun-Datar",
+      "cwd": "d:/Projek/Python/Bangun-Datar",
       "environment": [],
-      "program": "d:\\Projek\\Python\\Bangun-Datar\\build\\Debug\\outDebug",
+      "program": "d:/Projek/Python/Bangun-Datar/build/Debug/outDebug",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
